[package]
name = "delegator_income"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
lazy_static = "1.4.0"
semaphore = "0.4.0"
rayon = "1.5"
blake3 = "0.3"
once_cell = "1.7.2"
single = "1.0"